--- a/templates/AnimeNAS.html
+++ b/templates/AnimeNAS.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="icon" href="static/Browser Logo.png">
+    <link rel="icon" href={{url_for('static',filename='Browser Logo.png')}}>
     <title>Animes</title>
 </head>
 
@@ -263,7 +263,9 @@
 
         <div class="grid">
             {%for anime_downloaded in downloaded_list%}
-            <p style="background-color: #345f7c; color: #1b262c;">{{anime_downloaded.anime_title}}</p>
+            <a href="/Animes/Play/anime_id={{anime_downloaded.anime_id}}/episode=1" style="text-decoration:none;">
+                <p style="background-color: #345f7c; color: #1b262c;">{{anime_downloaded.anime_title}}</p>
+            </a>
             {%endfor%}
         </div>
     </div>
