--- a/templates/AnimesVideo.html
+++ b/templates/AnimesVideo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="icon" href="static/BrowserLogo.png">
+    <link rel="icon" href={{url_for("static",filename="Browser Logo.png")}}>
     
     
     <title>Anime Episodes</title>
