--- a/templates/AnimeNAS.html
+++ b/templates/AnimeNAS.html
@@ -100,7 +100,7 @@
         right: 10%;
 
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 
         /* background-color: white; */
         
