--- a/templates/AnimeNAS.html
+++ b/templates/AnimeNAS.html
@@ -100,7 +100,7 @@
         right: 10%;
 
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: repeat(auto-fit, minmax(auto, auto));
 
         /* background-color: white; */
         
@@ -192,6 +192,7 @@
         background-color: #1b262c;
         color: #345f7c;
         border-radius: 5px;
+        
         
     }
 
