--- a/templates/AnimesVideo.html
+++ b/templates/AnimesVideo.html
@@ -19,7 +19,7 @@
         left: 10%;
 
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(auto, auto));
         
 
         
