--- a/templates/AnimeNAS.html
+++ b/templates/AnimeNAS.html
@@ -244,7 +244,7 @@
         <div class="Anime_Poster_Container" style="top: 30%;">
            {% for watching in watching_list%}
                 <a href="/Animes/Play/anime_id={{watching.anime_id}}/episode=1">
-                    <img class="Anime_Poster" src="{{watching.cover_path}}" alt="{{watching.anime_title " title="{{watching.anime_title}}">
+                    <img class="Anime_Poster" src="{{watching.cover_path}}" alt="{{watching.anime_title}} " title="{{watching.anime_title}}">
                 </a>
            {%endfor%}
         </div>
