Changed the background color for the video player so it's black

--- a/templates/AnimesVideo.html
+++ b/templates/AnimesVideo.html
@@ -46,7 +46,7 @@
         position: absolute;
         top: 5%;
         left: 10%;
-        background-color: #345f7c;
+        background-color: black;
         width: 80%;
         height: auto;
 
